Nie wymuszam bledu w circleci, bo omylko sam go wymusilem wczesniej :). Screen bledu dodany, lint dodany do config.yml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,9 @@ jobs:
 
       - checkout 
 
-      - run: make deps 
+      - run: make deps
+       
+      - run: make lint
 
       - run: make test       
 
